# industrial_robot_proj

./: .gitignore  README.md
arm_description/: package.xml
arm_description/config/: joint_names_arm_description.yaml  joints_controllers.yaml  urdf.rviz
arm_description/launch/: controller.launch  display.launch  gazebo.launch  simulation.launch
arm_description/meshes/: Base_Link.STL  Link_00.STL  Link_01.STL  link_02.STL
arm_description/scripts/: fw.py  iv.py
arm_description/urdf/: arm_description.urdf  arm_description_backup.urdf
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: joint_names_robot_description.yaml
robot_description/launch/: display.launch  gazebo.launch  rviz.launch
robot_description/meshes/: Base_Link.STL  Link_01.STL  Link_02.STL  Link_03.STL  katana_base_link.STL  katana_motor1_pan_link.STL  katana_motor2_lift_link.STL  katana_motor3_lift_link.STL
robot_description/urdf/: arm.urdf  robot_description.urdf
