<package>
	<name>arm_description</name>
	<version>0.0.1</version>
	<description>
		<p>URDF Description package for arm_description</p>
		<p>This package contains configuration data, 3D models and launch files for arm_description robot</p>
	</description>

	<author>me</author>
	<maintainer email="me@email.com" />
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roslaunch</build_depend>
	<build_depend>controller_manager</build_depend>
	<build_depend>robot_state_publisher</build_depend>
	<build_depend>rviz</build_depend>
	<build_depend>joint_state_publisher</build_depend>
	<build_depend>gazebo</build_depend>

	<run_depend>ros_control</run_depend>
	<run_depend>ros_controllers</run_depend>
	<run_depend>gazebo_ros_control</run_depend>
	<run_depend>gazebo_ros_pkgs</run_depend>

	<export>
		<architecture_independent />
	</export>
</package>