<?xml version="1.0"?>
<package>
	<name>robot_description</name>
	<version>0.0.1</version>
	<description>
		<p>URDF Description package for robot_description</p>
		<p>This package contains configuration data, 3D models and launch files for robot_description robot</p>
	</description>
	<author>DMPatod</author>
	<maintainer email="me2email.com" />

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>controller_manager</build_depend>
	<build_depend>joint_state_publisher</build_depend>
	<build_depend>robot_state_publisher</build_depend>
	<build_depend>urdf</build_depend>

	<build_export_depend>controller_manager</build_export_depend>
	<build_export_depend>joint_state_publisher</build_export_depend>
	<build_export_depend>robot_state_publisher</build_export_depend>
	<build_export_depend>urdf</build_export_depend>

	<exec_depend>controller_manager</exec_depend>
	<exec_depend>joint_state_publisher</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>urdf</exec_depend>

	<export>
	</export>
</package>